# PolyNBA

./: .env.example  .gitignore  README.md  SYSTEM_OVERVIEW.md  pyproject.toml  requirements.txt  skills-lock.json
.agents/skills/github-projects/: SKILL.md
.claude/skills/espn-api/: SKILL.md
.claude/skills/nba-api/: SKILL.md
.claude/skills/player-strength/: SKILL.md
.claude/skills/polymarket-api/: SKILL.md
.claude/skills/pregame/: SKILL.md
.claude/skills/replay/: SKILL.md
.claude/skills/team-strength/: SKILL.md
.claude/skills/test-game/: SKILL.md
.claude/skills/validate-apis/: SKILL.md
docs/: CONFIGURATION.md
polynba/: __init__.py  __main__.py
polynba/analysis/: __init__.py  claude_analyzer.py  context_builder.py  edge_detector.py  probability_calculator.py
polynba/bot/: __init__.py  main.py  trading_loop.py
polynba/config/: config.yaml  risk_limits.yaml
polynba/data/: __init__.py  cache.py  espn_teams.py  failover.py  manager.py
polynba/polymarket/: __init__.py  market_discovery.py  market_mapper.py  models.py  price_fetcher.py
polynba/pregame/: __init__.py  __main__.py  advisor.py  ai_analyzer.py  check_orders.py  execute.py  guard_sells.py  pregame_context.py  probability_model.py
polynba/replay/: __init__.py  log_parser.py  models.py  output.py  replay_engine.py
polynba/strategy/: __init__.py  loader.py  rule_engine.py  strategy_manager.py
polynba/testing/: __init__.py  live_price_simulator.py  mock_mapper.py  test_game_provider.py
polynba/tests/: test_probability_calculator.py  test_rule_engine.py  validate_apis.py  validate_polymarket.py  validation_helpers.py
polynba/tools/: espn_api.py  nba_api.py  player_strength.py  polymarket_api.py  team_strength.py
polynba/trading/: __init__.py  executor.py  gas_manager.py  order_manager.py  position_tracker.py  risk_manager.py
polynba/utils/: __init__.py  logger.py  performance.py  portfolio_display.py
scripts/: batch_replay.sh  batch_test.sh  diagnose_wallet.py  replay_strategy.py  setup_allowances.py  test_order.py  test_polymarket_discovery.py  trade_history.py
web/backend/: README.md  app.py  config.py  dependencies.py  schemas.py
web/frontend/: README.md  index.html  package-lock.json  package.json
(+95 files in other folders)
