[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polynba"
version = "0.1.0"
description = "NBA Live In-Game Trading Bot for Polymarket"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "PolyNBA Team"}
]
keywords = ["nba", "trading", "polymarket", "sports-betting", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "anthropic>=0.40.0",
    "py-clob-client>=0.34.5",
    "web3>=6.0.0",
    "aiohttp>=3.9.0",
    "aiolimiter>=1.1.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "cachetools>=5.3.0",
    "tenacity>=8.2.0",
    "websocket-client>=1.0.0",
    "curl_cffi>=0.7.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
polynba = "polynba.bot.main:main"

[project.urls]
Homepage = "https://github.com/polynba/polynba"
Repository = "https://github.com/polynba/polynba"

[tool.setuptools.packages.find]
where = ["."]
include = ["polynba*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=polynba --cov-report=term-missing"
